header+history+menu

--- a/index.html
+++ b/index.html
@@ -134,5 +134,106 @@
             </div>
         </div>
     </div>
+    <div class="black-block">
+      <div class="container">
+        <div class="block-holder">
+          <div class="left">
+            <div class="left-title">Відсвяткуйте в одному з <br> найкращих ресторанів.</div>
+            <div class="left-text">Тільки цього місяця бізнес-ланч від 20 $</div>
+          </div>
+          <div class="right">
+            <div class="btn">
+              <a href="#" class="button">Замовити стіл</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="dishes">
+      <div class="container">
+        <div class="dishes-title">
+          <p>Наші <span>Cтрави</span></p>
+        </div>
+        <div class="burgers">
+          <div class="burgers-img">
+            <img src="./image/pizza.jpg" alt="pizza" class="pizza">
+          </div>
+          <div class="burgers-items">
+            <div class="burger-item">
+              <img src="./image/burger.jpg" alt="burger" 
+              class="burger">
+              <div class="burger-text">Гамбургер міні----------------------15$</div>
+            </div>
+            <div class="burger-item">
+              <img src="./image/burger.jpg" alt="burger" 
+              class="burger">
+              <div class="burger-text">Гамбургер міні----------------------15$</div>
+            </div>
+            <div class="burger-item">
+              <img src="./image/burger.jpg" alt="burger" 
+              class="burger">
+              <div class="burger-text">Гамбургер міні----------------------15$</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="menu">
+      <div class="container">
+        <div class="menu-title">
+          Наше Меню
+        </div>
+        <div class="menu-items">
+          <div class="menu-item">
+            <div class="menu-image">
+              <img src="./image/menu-item.png" alt="menu" class="menu-img">
+              <div class="price">
+                <img src="./image/ellipse.png" alt="price" class="price-image">
+                <div class="price-10">
+                  10$
+                </div>
+              </div>
+              <div class="menu-text">Гамбургер Максі</div>
+              <div class="subtext">Максимально товстий <br> шар м'яса</div>
+              <div class="btn">
+                <a href="#" class="button  shadow">Замовити</a>
+              </div>
+            </div>
+          </div>
+          <div class="menu-item">
+            <div class="menu-image">
+              <img src="./image/menu-item.png" alt="menu" class="menu-img">
+              <div class="price">
+                <img src="./image/ellipse.png" alt="price" class="price-image">
+                <div class="price-10">
+                  10$
+                </div>
+              </div>
+              <div class="menu-text">Гамбургер Максі</div>
+              <div class="subtext">Максимально товстий <br> шар м'яса</div>
+              <div class="btn">
+                <a href="#" class="button  shadow">Замовити</a>
+              </div>
+            </div>
+          </div>
+          <div class="menu-item">
+            <div class="menu-image">
+              <img src="./image/menu-item.png" alt="menu" class="menu-img">
+              <div class="price">
+                <img src="./image/ellipse.png" alt="price" class="price-image">
+                <div class="price-10">
+                  10$
+                </div>
+              </div>
+              <div class="menu-text">Гамбургер Максі</div>
+              <div class="subtext">Максимально товстий <br> шар м'яса</div>
+              <div class="btn">
+                <a href="#" class="button  shadow">Замовити</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
