--- a/index.html
+++ b/index.html
@@ -235,5 +235,72 @@
         </div>
       </div>
     </div>
+    <div class="comment">
+      <div class="container">
+        <div class="comment-text">
+          Я надовго запам'ятаю мій День народження, проведений у цьому ресторані! Шматок рідної Вірменії! <br> Окреме дякую за комплепент у вигляді фруктової тарілки. <br> Рекомендуємо цей ресторан своїм друзям та родичам також за кордоном, <br> що подорожують до Київа!!!
+        </div>
+        <div class="comment-author">
+          <div class="comment-image">
+            <img src="./image/comment.png" alt="comment-author" class="comment-img">
+            <div class="comment-text2">Відвідувач</div>
+            <div class="comment-text3">Артем</div>
+            <div class="comment-ellipse">
+              <div class="ellepse1">
+                <img src="./image/Ellipse3.png" alt="ellipse" class="ellepse-img">
+              </div>
+              <div class="ellepse1">
+                <img src="./image/Ellipse3.png" alt="ellipse" class="ellepse-img">
+              </div>
+              <div class="ellepse1">
+                <img src="./image/Ellipse 1.png" alt="ellipse" class="ellepse-img">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="galery">
+      <div class="container">
+        <div class="galery-title">
+          Галерея <span>Страв</span>
+        </div>
+        <div class="galery-content">
+          <div class="galery-left">
+            <div class="galery-up">
+              <img src="./image/galery1.jpg">
+            </div>
+            <div class="galery-down">
+              <img src="./image/galery2.jpg">
+              <img src="./image/galery3.jpg">
+            </div>
+          </div>
+          <div class="galery-right">
+            <div class="galery-up">
+              <img src="./image/galery2.jpg">
+              <img src="./image/galery3.jpg">
+            </div>
+            <div class="galery-down">
+              <img src="./image/galery1.jpg">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="cook">
+      <div class="container">
+        <div class="cook-title">
+          Наші <span>Кухарі</span>
+        </div>
+        <div class="cook-content">
+          <img src="./image/cook1.jpg" class="cook-img">
+          <img src="./image/cook2.jpg" class="cook-img">
+          <img src="./image/cook3.jpg" class="cook-img">
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      Copyright 2022
+    </div>
   </body>
 </html>
